<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/_16dp"
    tools:context=".latihanFragment.OptionDialogFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_question"
        android:layout_marginBottom="@dimen/_16dp"
        />

    <RadioGroup
        android:id="@+id/rg_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/rb_saf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16dp"
            android:text="@string/txt_option1" />
        <RadioButton
            android:id="@+id/rb_mou"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16dp"
            android:text="@string/txt_option2" />
        <RadioButton
            android:id="@+id/rb_lvg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16dp"
            android:text="@string/txt_opytion3" />
        <RadioButton
            android:id="@+id/rb_mouyes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16dp"
            android:text="@string/txt_option4" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_close"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_4dp"
            android:layout_marginRight="@dimen/_4dp"
            android:layout_weight="0.5"
            android:text="@string/txt_close"/>

        <Button
            android:id="@+id/btn_choose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_marginStart="@dimen/_4dp"
            android:layout_marginLeft="@dimen/_4dp"
            android:layout_weight="0.5"
            android:text="@string/txt_choose"/>

    </LinearLayout>


</LinearLayout>