<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_16dp"
    android:orientation="vertical"
    tools:context=".latihanFragment.DetailCategoryFragment">


    <TextView
        android:id="@+id/tv_category_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_24sp"
        android:layout_marginBottom="@dimen/_16dp"
        android:text="@string/txt_name_category" />

    <TextView
        android:id="@+id/tv_category_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_24sp"
        android:layout_marginBottom="@dimen/_16dp"
        android:text="@string/txt_detail"/>

    <Button
        android:id="@+id/btn_profile"
        android:layout_width="match_parent"
        android:text="@string/txt_profike"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_dialog"/>




</LinearLayout>